tap/network/aws/vpc.yaml
#!
#! This file shows how to define an aws VPC 
#! 
#! Subnets for a 10.0.0.0/16 AWS VPC, divining the VPC into 2 subnets per AZ
#! 1 public subnet, 1 private subnet and 2 spare subnets to be used in needed
#! in the future 
#! 
#! Subnet address| Range of addresses	      | Useable IPs	              | Hosts	
#! 10.0.0.0/19	  | 10.0.0.0 - 10.0.31.255	  | 10.0.0.1 - 10.0.31.254	  | 8190	
#! 10.0.32.0/19	| 10.0.32.0 - 10.0.63.255	  | 10.0.32.1 - 10.0.63.254	  | 8190	
#! 10.0.64.0/19	| 10.0.64.0 - 10.0.95.255	  | 10.0.64.1 - 10.0.95.254	  | 8190	
#! 10.0.96.0/19	| 10.0.96.0 - 10.0.127.255	| 10.0.96.1 - 10.0.127.254	| 8190	
#! 10.0.128.0/19	| 10.0.128.0 - 10.0.159.255	| 10.0.128.1 - 10.0.159.254	| 8190	
#! 10.0.160.0/19	| 10.0.160.0 - 10.0.191.255	| 10.0.160.1 - 10.0.191.254	| 8190	
#! 10.0.192.0/19	| 10.0.192.0 - 10.0.223.255	| 10.0.192.1 - 10.0.223.254	| 8190	
#! 10.0.224.0/19	| 10.0.224.0 - 10.0.255.255	| 10.0.224.1 - 10.0.255.254	| 8190	
#! 

#@ def subnetName(type,vpc,region,az):
#@ return vpc + "-" + type + "-subnet-" + region + az
#@ end 

#@ def subnet(type,vpc,region,az,cidr):
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Subnet
metadata:
  name: #@ subnetName(type,vpc,region,az)
spec:
  forProvider:
    vpcIdRef:
      name: #@ vpc
    tags: 
      Name: #@ subnetName(type,vpc,region,az)
    region: #@ region
    availabilityZone: #@ region + az
    cidrBlock: #@ cidr
  providerConfigRef:
    name: aws-upjet-provider
#@ end

#@ def vpc(name, region): 
apiVersion: ec2.aws.upbound.io/v1beta1
kind: VPC
metadata:
  name: #@ name
spec:
  forProvider:
    cidrBlock: 10.0.0.0/16
    region: #@ region
    enableDnsSupport: true
    enableDnsHostnames: true
    instanceTenancy: default
    tags: 
      Name: #@ name
  providerConfigRef:
    name: aws-upjet-provider
#@ end

#@ def internetGatewayName(vpc):
#@ return vpc + "-internet-gateway"
#@ end

#@ def internetGateway(vpc, region): 
apiVersion: ec2.aws.upbound.io/v1beta1
kind: InternetGateway
metadata:
  name: #@ internetGatewayName(vpc)
spec:
  forProvider:
    region: #@ region
    tags:
      Name:  #@ internetGatewayName(vpc)
    vpcIdRef:
      name: #@ vpc
  providerConfigRef:
    name: aws-upjet-provider
#@ end

#@ def defaultRouteTable(vpc,region):
apiVersion: ec2.aws.upbound.io/v1beta1
kind: DefaultRouteTable
metadata:
  name: #@ "main-" + vpc + "-route-table"
spec:
  forProvider:
    defaultRouteTableIdRef:
      name: #@ vpc
    region: #@ region
    route:
      - cidrBlock: 0.0.0.0/0
        gatewayIdRef:
          name: #@ internetGatewayName(vpc)
    tags:
      Name: #@ "main-" + vpc + "-route-table"
  providerConfigRef:
    name: aws-upjet-provider
#@ end

#@ def route(region,destinationCidr):
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: default-route
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: #@ internetGatewayName(vpc)
    region: #@ region
    routeTableIdRef:
      name: table
  providerConfigRef:
    name: aws-upjet-provider
#@ end

#! Subnet address | Range of addresses	      | Useable IPs	              | Hosts	
#! 10.0.0.0/19	  | 10.0.0.0 - 10.0.31.255	  | 10.0.0.1 - 10.0.31.254	  | 8190	
#! 10.0.32.0/19	  | 10.0.32.0 - 10.0.63.255	  | 10.0.32.1 - 10.0.63.254	  | 8190	
#! 10.0.64.0/19	  | 10.0.64.0 - 10.0.95.255	  | 10.0.64.1 - 10.0.95.254	  | 8190	
#! 10.0.96.0/19	  | 10.0.96.0 - 10.0.127.255	| 10.0.96.1 - 10.0.127.254	| 8190	
#! 10.0.128.0/19	| 10.0.128.0 - 10.0.159.255	| 10.0.128.1 - 10.0.159.254	| 8190	
#! 10.0.160.0/19	| 10.0.160.0 - 10.0.191.255	| 10.0.160.1 - 10.0.191.254	| 8190	
#! 10.0.192.0/19	| 10.0.192.0 - 10.0.223.255	| 10.0.192.1 - 10.0.223.254	| 8190	
#! 10.0.224.0/19	| 10.0.224.0 - 10.0.255.255	| 10.0.224.1 - 10.0.255.254	| 8190	
#! 

--- #@ vpc(name="tap", region="us-east-1")

--- #@ subnet(vpc="tap", region="us-east-1", az="a", cidr="10.0.0.0/19", type="public",)
--- #@ subnet(vpc="tap", region="us-east-1", az="a", cidr="10.0.32.0/19", type="private")

--- #@ subnet(vpc="tap", region="us-east-1", az="b", cidr="10.0.64.0/19", type="public",)
--- #@ subnet(vpc="tap", region="us-east-1", az="b", cidr="10.0.96.0/19", type="private")

--- #@ subnet(vpc="tap", region="us-east-1", az="c", cidr="10.0.128.0/19", type="public",)
--- #@ subnet(vpc="tap", region="us-east-1", az="c", cidr="10.0.160.0/19", type="private")

--- #@ internetGateway(vpc="tap",region="us-east-1")

--- #@ defaultRouteTable(vpc="tap", region="us-east-1")
